--- a/style.css
+++ b/style.css
@@ -66,8 +66,7 @@ button{
     align-items: center;
   
 }
-.items img:hover{
-  transition: width 2s, height 2s, transform 2s;
+
 }
 .items img{
     width: 60%;
@@ -138,3 +137,6 @@ footer{
     
     
 }
+/* ----------------------
+mobile device style end
+------------------------- */
